--- a/App 2 modulo/Las Chelas/Las Chelas/Las Chelas/AccountTab/View/AccountTab.storyboard
+++ b/App 2 modulo/Las Chelas/Las Chelas/Las Chelas/AccountTab/View/AccountTab.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -126,7 +127,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tarjetasPago" translatesAutoresizingMaskIntoConstraints="NO" id="pag-px-zLl">
-                                <rect key="frame" x="42" y="113" width="290" height="179"/>
+                                <rect key="frame" x="42" y="113" width="290" height="130"/>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jG0-Y0-RyW">
                                 <rect key="frame" x="42" y="369" width="290" height="30"/>
@@ -230,16 +231,19 @@
             </objects>
             <point key="canvasLocation" x="2502" y="439"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Cuenta-->
         <scene sceneID="OAh-WB-6Z4">
             <objects>
                 <navigationController id="MSf-ID-Qyc" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Cuenta" id="9dQ-lY-TZP"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ZdR-Jn-bcz">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" red="0.0" green="0.56284224989999998" blue="0.31881666180000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="barTintColor" name="grayBeer"/>
                         <textAttributes key="titleTextAttributes">
-                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="17"/>
+                            <color key="textColor" name="blackBeer"/>
                             <color key="textShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </textAttributes>
                     </navigationBar>
@@ -254,5 +258,12 @@
     </scenes>
     <resources>
         <image name="tarjetasPago" width="1280" height="720"/>
+        <namedColor name="blackBeer">
+            <color red="0.22400000691413879" green="0.24300000071525574" blue="0.27500000596046448" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="grayBeer">
+            <color red="0.92549019607843142" green="0.90980392156862744" blue="0.85098039215686272" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
+    <color key="tintColor" name="blackBeer"/>
 </document>
