--- a/App 2 modulo/Las Chelas/Las Chelas/Las Chelas/BeerTab/View/DetailBeerST.storyboard
+++ b/App 2 modulo/Las Chelas/Las Chelas/Las Chelas/BeerTab/View/DetailBeerST.storyboard
@@ -172,6 +172,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="jC3-LL-W8P"/>
                     </view>
+                    <navigationItem key="navigationItem" id="NQQ-VV-QqZ"/>
                     <connections>
                         <outlet property="beerCounterLabel" destination="OZB-Wx-srF" id="WyI-b3-vF6"/>
                         <outlet property="beerImage" destination="ois-cg-wMQ" id="ZDl-VC-vIJ"/>
@@ -183,7 +184,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WDf-JE-Pgo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="197.10144927536234" y="-1.6304347826086958"/>
+            <point key="canvasLocation" x="1104.3478260869565" y="-1.6304347826086958"/>
         </scene>
     </scenes>
     <resources>
