--- a/App 2 modulo/Las Chelas/Las Chelas/Las Chelas/BeerTab/View/DetailBeerST.storyboard
+++ b/App 2 modulo/Las Chelas/Las Chelas/Las Chelas/BeerTab/View/DetailBeerST.storyboard
@@ -51,28 +51,33 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Biy-V1-XqB">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Biy-V1-XqB">
                                                     <rect key="frame" x="32" y="11" width="42" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5EL-gc-3Hi">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5EL-gc-3Hi">
                                                     <rect key="frame" x="141" y="11" width="42" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TfO-7n-DrL">
-                                                    <rect key="frame" x="342" y="11" width="42" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TfO-7n-DrL">
+                                                    <rect key="frame" x="352" y="11" width="42" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="Biy-V1-XqB" secondAttribute="bottom" constant="11.666666666666664" id="KF7-dh-htw"/>
+                                                <constraint firstItem="Biy-V1-XqB" firstAttribute="leading" secondItem="df4-qz-9cL" secondAttribute="leading" constant="32" id="XRa-FN-Jxg"/>
+                                                <constraint firstAttribute="trailing" secondItem="TfO-7n-DrL" secondAttribute="trailing" constant="20" id="ZDj-Pa-xi5"/>
+                                                <constraint firstItem="TfO-7n-DrL" firstAttribute="top" secondItem="df4-qz-9cL" secondAttribute="top" constant="11" id="dbC-lI-lKy"/>
                                                 <constraint firstItem="5EL-gc-3Hi" firstAttribute="leading" secondItem="Biy-V1-XqB" secondAttribute="trailing" constant="67" id="mGb-f2-aHM"/>
+                                                <constraint firstAttribute="bottom" secondItem="5EL-gc-3Hi" secondAttribute="bottom" constant="11.666666666666664" id="nef-OX-P3t"/>
+                                                <constraint firstItem="TfO-7n-DrL" firstAttribute="leading" secondItem="5EL-gc-3Hi" secondAttribute="trailing" constant="169" id="x4a-F0-kHz"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -112,14 +117,14 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SPh-rD-xXm">
-                                <rect key="frame" x="141" y="286" width="39" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Count" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cxb-kL-6nK">
+                                <rect key="frame" x="337" y="286" width="47" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Count" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cxb-kL-6nK">
-                                <rect key="frame" x="347" y="285" width="47" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SPh-rD-xXm">
+                                <rect key="frame" x="149" y="285" width="39" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -128,13 +133,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="cQp-kw-MVo" firstAttribute="leading" secondItem="jC3-LL-W8P" secondAttribute="leading" constant="10" id="3LV-oH-Vnp"/>
-                            <constraint firstItem="cxb-kL-6nK" firstAttribute="trailing" secondItem="OiR-wx-23E" secondAttribute="trailing" constant="-10" id="5sc-tH-cCS"/>
+                            <constraint firstItem="cxb-kL-6nK" firstAttribute="trailing" secondItem="OiR-wx-23E" secondAttribute="trailing" constant="-20" id="5sc-tH-cCS"/>
                             <constraint firstItem="jC3-LL-W8P" firstAttribute="bottom" secondItem="q6c-pa-xxM" secondAttribute="bottom" constant="100" id="9cW-Gt-50Z"/>
                             <constraint firstItem="ois-cg-wMQ" firstAttribute="top" secondItem="jC3-LL-W8P" secondAttribute="top" constant="20" id="9wX-Tn-Ovc"/>
                             <constraint firstItem="jC3-LL-W8P" firstAttribute="trailing" secondItem="q6c-pa-xxM" secondAttribute="trailing" id="Dvt-Pk-HXS"/>
-                            <constraint firstItem="cxb-kL-6nK" firstAttribute="baseline" secondItem="SPh-rD-xXm" secondAttribute="baseline" constant="-1" id="FFN-A2-zqW"/>
-                            <constraint firstItem="SPh-rD-xXm" firstAttribute="leading" secondItem="FYG-7M-jBo" secondAttribute="trailing" constant="80" id="HBs-E9-sMk"/>
-                            <constraint firstItem="SPh-rD-xXm" firstAttribute="top" secondItem="Fmz-4Y-9Xe" secondAttribute="bottom" constant="21" id="Mz7-X3-ei4"/>
+                            <constraint firstItem="cxb-kL-6nK" firstAttribute="baseline" secondItem="SPh-rD-xXm" secondAttribute="baseline" constant="1" id="FFN-A2-zqW"/>
+                            <constraint firstItem="SPh-rD-xXm" firstAttribute="leading" secondItem="FYG-7M-jBo" secondAttribute="trailing" constant="88" id="HBs-E9-sMk"/>
+                            <constraint firstItem="SPh-rD-xXm" firstAttribute="top" secondItem="Fmz-4Y-9Xe" secondAttribute="bottom" constant="20" id="Mz7-X3-ei4"/>
                             <constraint firstItem="Fmz-4Y-9Xe" firstAttribute="centerX" secondItem="FYf-HH-YdG" secondAttribute="centerX" id="O3o-PC-j5i"/>
                             <constraint firstItem="q6c-pa-xxM" firstAttribute="top" secondItem="Fmz-4Y-9Xe" secondAttribute="bottom" constant="50" id="QVC-FE-Qif"/>
                             <constraint firstItem="jC3-LL-W8P" firstAttribute="trailing" secondItem="OiR-wx-23E" secondAttribute="trailing" constant="10" id="RLo-fm-79i"/>
@@ -146,9 +151,10 @@
                             <constraint firstItem="OZB-Wx-srF" firstAttribute="top" secondItem="q6c-pa-xxM" secondAttribute="bottom" constant="36" id="ezN-jw-Mr2"/>
                             <constraint firstItem="OiR-wx-23E" firstAttribute="top" secondItem="ois-cg-wMQ" secondAttribute="bottom" constant="20" id="h2Z-VK-DkS"/>
                             <constraint firstItem="cQp-kw-MVo" firstAttribute="top" secondItem="ois-cg-wMQ" secondAttribute="bottom" constant="20" id="jck-ji-EnO"/>
-                            <constraint firstItem="q6c-pa-xxM" firstAttribute="top" secondItem="SPh-rD-xXm" secondAttribute="bottom" constant="8" id="mwb-qm-i3G"/>
+                            <constraint firstItem="q6c-pa-xxM" firstAttribute="top" secondItem="SPh-rD-xXm" secondAttribute="bottom" constant="9" id="mwb-qm-i3G"/>
                             <constraint firstItem="jC3-LL-W8P" firstAttribute="bottom" secondItem="OZB-Wx-srF" secondAttribute="bottom" constant="43" id="sWH-5Y-hDa"/>
                             <constraint firstItem="q6c-pa-xxM" firstAttribute="firstBaseline" secondItem="FYG-7M-jBo" secondAttribute="baseline" constant="12.333333333333334" symbolType="layoutAnchor" id="t90-gL-WT3"/>
+                            <constraint firstItem="jC3-LL-W8P" firstAttribute="trailing" secondItem="cxb-kL-6nK" secondAttribute="trailing" constant="30" id="x58-CC-3wx"/>
                             <constraint firstItem="fgd-tZ-wQx" firstAttribute="top" secondItem="ois-cg-wMQ" secondAttribute="bottom" constant="20" id="xlP-rr-jeo"/>
                             <constraint firstItem="q6c-pa-xxM" firstAttribute="leading" secondItem="jC3-LL-W8P" secondAttribute="leading" id="xsa-Sm-zDh"/>
                         </constraints>
